Add folderse and files for structured app; create initial tests to validate mocha function

--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -3,4 +3,5 @@ html
     head
         link(rel='stylesheet', href='/scripts/bootstrap/dist/css/bootstrap.min.css')
     body
-        h1 Good morning ICF
+        h1 Welcome
+        p Something meaningful goes here.
