--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -2,6 +2,24 @@ doctype
 html
     head
         link(rel='stylesheet', href='/scripts/bootstrap/dist/css/bootstrap.min.css')
-    body
-        h1 Welcome
-        p Something meaningful goes here.
+    body(ng-app='app')
+        .container
+            div(ng-controller='demoCtrl')
+                h1 Post a Item
+                form(ng-submit="submit()")
+                    .form-group
+                        input.form-control(placeholder="Title" ng-model="title")
+                    .form-group
+                        textarea.form-control(placeholder="Description" ng-model="description")
+                    .form-group
+                        button.btn.btn-primary(type="submit") Post
+                h1 List of current items
+                .list-group
+                    a.list-group-item(href='#')(ng-repeat="item in demoData")
+                        h4.list-group-item-heading {{ item.title }}
+                        p.list-group-item-text {{ item.description }}
+    
+    script(type='text/javascript', src='/scripts/angular/angular.js')
+    script(type='text/javascript', src='/scripts/angular-resource/angular-resource.js')
+    script(type='text/javascript', src='/app/app.js')
+    script(type='text/javascript', src='/app/factories.js')
