--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -6,9 +6,10 @@ html
     body(ng-app='app')
         main.container(ng-controller='demoCtrl')
             h1 Small Business Lenders
-            .row
-                .well
-                    form(ng-submit="submit()")
+
+            section.row
+                .col-xs-12    
+                    form.well(ng-submit="submit()")
                         legend Search
                         .form-group
                             label(for="assistance") Assistance
@@ -20,20 +21,26 @@ html
                             label(for="state") State
                             select.form-control(placeholder="Description" ng-disabled="industry.value == industryOptions[0].value" ng-model="state" id="state" ng-options="option.name for option in stateOptions")
                         button.btn.btn-primary(type="submit" ng-disabled="assistance.value == assistanceOptions[0].value") Get Results
-            .row
-                h2 Results for:
-                    small
-                        span.label.label-primary(ng-repeat="criteria in searchCriteria" data-handleClick="removeCriteria(criteria)" data-key="{{criteria.key}}" data-value="{{criteria.value}}" data-search-criteria-item="data-search-criteria-item")
 
-                table.table(ng-if="searchResults.length > 0")
-                    thead
-                        tr
-                            th Title
-                            th Source
-                            th State
-                    tbody
-                p.bg-info(ng-if="searchCriteria.length === 0") Use the search form above to find Small Business Lenders
-                p.bg-info(ng-if="searchCriteria.length !== 0 && searchResults.length === 0") Your search yielded no results.
+            section.row
+                .col-xs-12
+                    h2 Results for:
+                        small
+                            span.label.label-primary(ng-repeat="criteria in searchCriteria" data-handle-click="removeCriteria(criteria)" data-criteria="criteria" data-search-criteria-item="data-search-criteria-item")
+
+                    table.table(ng-if="searchResults.length > 0")
+                        thead
+                            tr
+                                th Title
+                                th Source
+                                th State
+                        tbody
+                            tr(ng-repeat="result in searchResults")
+                                td {{result.title}}
+                                td {{result.source}}
+                                td {{result.state}}
+                    p.alert.alert-info(ng-if="searchCriteria.length === 0") Use the search form above to find Small Business Lenders
+                    p.alert.alert-info(ng-if="searchCriteria.length !== 0 && searchResults.length === 0") Your search yielded no results.
 
     script(src='/scripts/angular/angular.js')
     script(src='/scripts/angular-resource/angular-resource.js')
