--- a/public/app/partials/input-state-city.html
+++ b/public/app/partials/input-state-city.html
@@ -3,7 +3,7 @@
 
     <div class="form-group col-lg-6">
         <label>State</label>
-        <select class="form-control" data-ng-options="" />
+        <select class="form-control"></select>
     </div>
 
     <div class="form-group col-lg-6">
