--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -10,21 +10,21 @@ html(lang="en-us")
         section.jumbotron
             header.container
                 h1 Should You Move There?
-                h2 Compare Healthcare Costs
+                h2 Compare Hospital Costs
         main.container(data-ng-controller='HealthcareCompareController' role="main")
             section.row
                 .col-xs-6.col-xs-offset-3    
                     form.well.clearfix(data-ng-submit="submit()")
                         input(type="hidden" name="_csrf" value=csrfToken)
-                        fieldset(data-input-state-city="data-input-state-city")
+                        fieldset(data-input-state-city="data-input-state-city" data-city="city_name_here" data-state="state_abbr_here")
                             legend.col-xs-12 Where do you live now?
-                        fieldset(data-input-state-city="data-input-state-city")
+                        fieldset(data-input-state-city="data-input-state-city" data-city="city_name_there" data-state="state_abbr_there")
                             legend.col-xs-12 Where do you want to move?
                         div.col-xs-12.form-actions
-                            button.btn.btn-primary(type="submit") Get Results
+                            button.btn.btn-primary(type="submit" data-ng-disabled="!canSubmit()") Get Results
 
             section.row
-                #results.col-xs-6.col-xs-offset-3    
+                #results.col-xs-6.col-xs-offset-3(data-ng-repeat="result in searchResults" data-compare-chart="data-compare-chart" data-compare-data="result")
 
 
             
