--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -6,6 +6,7 @@ html(lang="en-us")
         meta(name="viewport" content="width=device-width, initial-scale=1")
         link(rel='stylesheet', href='/scripts/bootstrap/dist/css/bootstrap.min.css')
         link(rel='stylesheet', href='/css/global.css')
+        title Compare Hospital Costs
     body(data-ng-app='app')
         section.jumbotron
             header.container
@@ -13,7 +14,7 @@ html(lang="en-us")
                 h2 Compare Hospital Costs
         main.container(data-ng-controller='HealthcareCompareController' role="main")
             section.row
-                .col-xs-6.col-xs-offset-3    
+                .col-xs-6.col-xs-offset-3
                     form.well.clearfix(data-ng-submit="submit()")
                         input(type="hidden" name="_csrf" value=csrfToken)
                         fieldset(data-input-state-city="data-input-state-city" data-city="city_name_here" data-state="state_abbr_here")
@@ -22,6 +23,10 @@ html(lang="en-us")
                             legend.col-xs-12 Where do you want to move?
                         div.col-xs-12.form-actions
                             button.btn.btn-primary(type="submit" data-ng-disabled="!canSubmit()") Get Results
+
+            section.row
+                div.col-xs-6.col-xs-offset-3
+                    status(data-status-message="statusMessage" data-status-type="statusType")
 
             section.row
                 #results.col-xs-6.col-xs-offset-3(data-ng-repeat="result in searchResults" data-compare-chart="data-compare-chart" data-compare-data="result")
