--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,3 +1,15 @@
 .input-city {
     text-transform: capitalize;
 }
+#map-canvas {
+    width: 100%;
+    height: 400px;
+    margin: 0 0 40px 0;
+    padding: 0;
+}
+section.jumbotron {
+    margin-top: 80px;
+}
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
