--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -25,6 +25,7 @@ html(lang="en-us")
     script(src='/scripts/angular-resource/angular-resource.js')
     script(src='/scripts/angular-route/angular-route.js')
     script(src='/scripts/highcharts-release/highcharts.js')
+    script(src='/scripts/d3/d3.min.js')
     script(src='/lib/angucomplete-alt/angucomplete-alt.min.js')
     script(src='/app/app.js')
     script(src='/app/config.js')
