--- a/public/app/partials/healthcareProviders.html
+++ b/public/app/partials/healthcareProviders.html
@@ -1,5 +1,5 @@
 <section class="row">
-    <div class="col-xs-8 col-xs-offset-2">
+    <div class="col-sm-8 col-sm-offset-2">
         <form class="well clearfix" data-ng-submit="submit()" autocomplete="off">
             <input type="hidden" name="_csrf" value="csrfToken" />
 
@@ -28,13 +28,13 @@
     </div>
 
     <section class="row">
-        <div class="col-xs-8 col-xs-offset-2">
+        <div class="col-sm-8 col-sm-offset-2">
             <status data-status-message="statusMessage" data-status-type="statusType"></status>
         </div>
     </section>
 
     <section class="row">
-        <div class="col-xs-8 col-xs-offset-2">
+        <div class="col-sm-8 col-sm-offset-2">
             <google-map data-marker-data="markers" data-latitude="latitude" data-longitude="longitude"></google-map>
         </div>
     </section>
